<resources>
    <string name="app_name">Who is like God</string>
    <string name="next">Next</string>
    <string name="back">Previous</string>
    <string name="novenna">Novena</string>
    <string name="settings">Settings</string>
    <string name="info">Information</string>
    <string name="app">Other Apps</string>
    <string name="rate">Rate the App</string>
    <string name="donate">Buy Me a Coffee</string>
    <string name="omowienie">Discussing</string>
    <string name="info2">The Great Consecration to St. Michael the Archangel</string>

    <string name="app_objawienia">Apparitions</string>
    <string name="app_rachunek_sumienia">Examination of Conscience</string>
    <string name="app_rachunek_sumienia_plus">Examination of Conscience Plus</string>
    <string name="app_niewolnik_maryi">Slave of Mary</string>
    <string name="app_niewolnik_maryi_plus">Slave of Mary Plus</string>
    <string name="app_kalkulator_cnc">CNC Calculator</string>
    <string name="app_kalkulator_cnc_plus">CNC Calculator Plus</string>
    <string name="app_moj_rozaniec">My Rosary</string>
    <string name="app_moj_rozaniec_plus">My Rosary Plus</string>
    <string name="app_kalendarz_liturgiczny">Liturgical Calendar</string>
    <string name="app_kalendarz_liturgiczny_plus">Liturgical Calendar Plus</string>
    <string name="app_droga_krzyzowa">Stations of the Cross</string>
    <string name="app_droga_krzyzowa_plus">Stations of the Cross Plus</string>
    <string name="error">Unable to find Google Play Store app</string>
    <string name="loading">Loading…</string>

    <string name="information_tekst0">The material has been sourced from the official website of the Parish of the Most Holy Trinity in Stalowa Wola (http://webmail.stalowawola-michalici.pl). The prayer texts are excerpted from the book entitled *The Greatness of Saint Michael the Archangel: A Monthly Devotion for Difficult Intentions*.</string>

</resources>
