<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:id="@+id/main"
    tools:context=".Activity_Apps"
    tools:ignore="UseCompoundDrawables">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:id="@+id/panel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/objawienia_logo"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView1"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_objawienia"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/rachunek_sumienia_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_rachunek_sumienia"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/rachunek_sumienia_plus_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_rachunek_sumienia_plus"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/niewolnik_maryi_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_niewolnik_maryi"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/niewolnik_maryi_plus_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_niewolnik_maryi_plus"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/kalkulator_cnc_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_kalkulator_cnc"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/kalkulator_cnc_plus"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_kalkulator_cnc_plus"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/moj_rozaniec_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_moj_rozaniec"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/moj_rozaniec_plus_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_moj_rozaniec_plus"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/kalendarz_liturgiczny_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_kalendarz_liturgiczny"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/kalendarz_liturgiczny_plus_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView11"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_kalendarz_liturgiczny_plus"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/droga_krzyzowa_logo"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView12"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_droga_krzyzowa"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/droga_krzyzowa_plus_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView13"
                    style="@style/textView_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_droga_krzyzowa_plus"
                    android:textSize="@dimen/medium" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/arrow_back_white_24"
            android:backgroundTint="@color/buttons"
            tools:ignore="contentDescription,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/textView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingEnd="48dp"
            android:textColor="@color/white"
            android:textSize="@dimen/medium"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>